Revert "try diff metric receiver"
This reverts commit d55e3dbde1178ec89862212ef603c1e9ac6d1149.

--- a/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
@@ -158,7 +158,7 @@ spec:
           exporters: [otlphttp/tempo, jaeger]
 
         metrics:
-          receivers: [otlp]
+          receivers: [prometheus]
           processors: [batch]
           exporters: [prometheus]
 
