--- a/argocd/apps/devops/devops-monitoring-appset.yaml
+++ b/argocd/apps/devops/devops-monitoring-appset.yaml
@@ -21,6 +21,8 @@ spec:
     metadata:
       name: '{{path.basename}}'
       namespace: argocd
+      labels:
+        appset-name: devops-monitoring-appset
     spec:
       project: devops
       source:
