--- a/argocd/apps/cluster-addons/cluster-addons-flagger-appset.yaml
+++ b/argocd/apps/cluster-addons/cluster-addons-flagger-appset.yaml
@@ -17,6 +17,8 @@ spec:
     metadata:
       name: "flagger-{{name}}"
       namespace: argocd
+      labels:
+        appset-name: cluster-addons-flagger-appset
     spec:
       project: cluster-addons
       source:
