--- a/argocd/apps/cluster-addons/cluster-addons-linkerd-stack-appset.yaml
+++ b/argocd/apps/cluster-addons/cluster-addons-linkerd-stack-appset.yaml
@@ -21,6 +21,8 @@ spec:
     metadata:
       name: '{{path.basename}}-{{name}}'
       namespace: argocd
+      labels:
+        appset-name: cluster-addons-linkerd-stack-appset
     spec:
       project: cluster-addons
       source:
