--- a/argocd/apps/devops/devops-shared-appset.yaml
+++ b/argocd/apps/devops/devops-shared-appset.yaml
@@ -15,6 +15,8 @@ spec:
     metadata:
       name: '{{path.basename}}'
       namespace: argocd
+      labels:
+        appset-name: devops-shared-appset
     spec:
       project: devops
       source:
