--- a/argocd/apps/cluster-addons/cluster-addons-tools-appset.yaml
+++ b/argocd/apps/cluster-addons/cluster-addons-tools-appset.yaml
@@ -31,7 +31,7 @@ spec:
       name: '{{path.basename}}-{{name}}'
       namespace: argocd
       labels:
-        appset-name: cluster-addons-tools-appset
+        appset: cluster-addons-tools-appset
     spec:
       project: cluster-addons
       source:
