--- a/argocd/apps/cluster-addons/cluster-addons-tools-dedicated-ns-appset.yaml
+++ b/argocd/apps/cluster-addons/cluster-addons-tools-dedicated-ns-appset.yaml
@@ -22,7 +22,7 @@
 #       name: '{{path.basename}}-{{name}}'
 #       namespace: argocd
 #       labels:
-#         appset-name: cluster-addons-dedicated-ns-appset
+#         appset: cluster-addons-dedicated-ns-appset
 #     spec:
 #       project: cluster-addons
 #       source:
