--- a/argocd/apps/devops/devops-monitoring-appset.yaml
+++ b/argocd/apps/devops/devops-monitoring-appset.yaml
@@ -22,7 +22,7 @@ spec:
       name: '{{path.basename}}'
       namespace: argocd
       labels:
-        appset-name: devops-monitoring-appset
+        appset: devops-monitoring-appset
     spec:
       project: devops
       source:
