--- a/argocd/apps/devops/devops-tools-appset.yaml
+++ b/argocd/apps/devops/devops-tools-appset.yaml
@@ -19,7 +19,7 @@ spec:
       name: '{{path.basename}}'
       namespace: argocd
       labels:
-        appset-name: devops-tools-appset
+        appset: devops-tools-appset
     spec:
       project: devops
       source:
