remove batch processor from otel coll metric pipeline

--- a/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
@@ -165,7 +165,7 @@ spec:
 
         metrics:
           receivers: [prometheus]
-          processors: [batch]
+          # processors: [batch]
           exporters: [prometheus]
 
         # logs:
