--- a/env/cluster-addons/monitoring/opentelemetry/resources/podmonitor-otelcol-metrics.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/podmonitor-otelcol-metrics.yaml
@@ -1,11 +1,12 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
 metadata:
-  name: otel-collector
+  name: otel-collector-prometheus-exporter
   labels:
-    name: otel-collector
+    name: otel-collector-prometheus-exporter
     release: prometheus-operator
 spec:
+  jobLabel: app.kubernetes.io/name
   namespaceSelector:
     matchNames:
       - monitoring
@@ -14,3 +15,4 @@ spec:
       app.kubernetes.io/name: otel-collector-daemonset-collector
   podMetricsEndpoints:
     - targetPort: 8889
+      honorLabels: true
