--- a/env/cluster-addons/monitoring/loki/values.yaml
+++ b/env/cluster-addons/monitoring/loki/values.yaml
@@ -55,7 +55,8 @@ serviceMonitor:
   # -- If enabled, ServiceMonitor resources for Prometheus Operator are created
   enabled: true
   labels:
-    prometheus: true
+    # required for prometheus-operator
+    release: prometheus-operator
 
 # Rules for the Prometheus Operator
 prometheusRule:
