--- a/env/cluster-addons/tools/reloader/values.yaml
+++ b/env/cluster-addons/tools/reloader/values.yaml
@@ -26,13 +26,14 @@ reloader:
   serviceMonitor:
     # Deprecated: Service monitor will be removed in future releases of reloader in favour of Pod monitor
     # Enabling this requires service to be enabled as well, or no endpoints will be found
-    enabled: false
+    enabled: true
     # Set the namespace the ServiceMonitor should be deployed
     namespace: monitoring
     # Set how frequently Prometheus should scrape
     interval: 1m
     # Set labels for the ServiceMonitor, use this to define your scrape label for Prometheus Operator
     labels:
+      # required for prometheus-operator
       release: prometheus-operator
     # Set timeout for scrape
     # timeout: 10s
