--- a/env/cluster-addons/tools/reloader/values.yaml
+++ b/env/cluster-addons/tools/reloader/values.yaml
@@ -23,28 +23,15 @@ reloader:
   #     tag: v0.0.110
   #     pullPolicy: IfNotPresent
 
-  serviceMonitor:
-    # Deprecated: Service monitor will be removed in future releases of reloader in favour of Pod monitor
-    # Enabling this requires service to be enabled as well, or no endpoints will be found
+  podMonitor:
     enabled: true
-    # Set the namespace the ServiceMonitor should be deployed
+    # Set the namespace the podMonitor should be deployed
     namespace: monitoring
     # Set how frequently Prometheus should scrape
     interval: 1m
-    # Set labels for the ServiceMonitor, use this to define your scrape label for Prometheus Operator
+    # Set labels for the podMonitor, use this to define your scrape label for Prometheus Operator
     labels:
       # required for prometheus-operator
       release: prometheus-operator
     # Set timeout for scrape
-    # timeout: 10s
-
-  podMonitor:
-    enabled: false
-    # Set the namespace the podMonitor should be deployed
-    # namespace: monitoring
-    # Set how frequently Prometheus should scrape
-    # interval: 30s
-    # Set labels for the podMonitor, use this to define your scrape label for Prometheus Operator
-    # labels:
-    # Set timeout for scrape
-    # timeout: 10s
+    timeout: 10s
