add svc monitor for tools

--- a/env/cluster-addons/others/flagger/values.yaml
+++ b/env/cluster-addons/others/flagger/values.yaml
@@ -30,10 +30,12 @@ msteams:
   url:
 
 podMonitor:
-  enabled: false
+  enabled: true
   namespace:
   interval: 15s
-  additionalLabels: {}
+  additionalLabels: 
+    # required for prometheus-operator
+    release: prometheus-operator
 
 
 #env:
