--- a/env/cluster-addons/tools/external-secrets/values.yaml
+++ b/env/cluster-addons/tools/external-secrets/values.yaml
@@ -65,11 +65,13 @@ certController:
     pullPolicy: IfNotPresent
     tag: ""
 
-  prometheus:
-      # -- Specifies whether to expose Service resource for collecting Prometheus metrics
+  serviceMonitor:
     enabled: true
-    service:
-      port: 9090
+    additionalLabels:
+      # required for prometheus-operator
+      release: prometheus-operator
+    interval: 30s
+    scrapeTimeout: 25s
 
   podSecurityContext:
       fsGroup: 2000
