--- a/env/cluster-addons/tools/cert-manager/cert-manager-values.yaml
+++ b/env/cluster-addons/tools/cert-manager/cert-manager-values.yaml
@@ -25,6 +25,17 @@ containerSecurityContext:
 
 prometheus:
   enabled: true
+  servicemonitor:
+    enabled: true
+    prometheusInstance: default
+    targetPort: 9402
+    path: /metrics
+    interval: 60s
+    scrapeTimeout: 30s
+    labels:
+      # required for prometheus-operator
+      release: prometheus-operator
+    honorLabels: false
 
 installCRDs: true
 
