--- a/env/cluster-addons/monitoring/opentelemetry/resources/podmonitor-otelcol-metrics.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/podmonitor-otelcol-metrics.yaml
@@ -15,4 +15,4 @@ spec:
       app.kubernetes.io/name: otel-collector-daemonset-collector
   podMetricsEndpoints:
     - targetPort: 8889
-      honorLabels: true
+      honorLabels: false
