--- a/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
@@ -110,8 +110,17 @@ spec:
       spanmetrics:
         # this exporter must be defined under exporters and must be in one of the metrics pipeline
         metrics_exporter: prometheus
+        # default latency_histogram_buckets
+        # latency_histogram_buckets: [2ms, 4ms, 6ms, 8ms, 10ms, 50ms, 100ms, 200ms, 400ms, 800ms, 1s, 1400ms, 2s, 5s, 10s, 15s]
+        dimensions:
+          - name: http.method
+            default: GET
+          - name: http.status_code
+        dimensions_cache_size: 1000
+        aggregation_temporality: "AGGREGATION_TEMPORALITY_DELTA"
 
     exporters:
+      # if logging enabled, info is default logLevel
       # logging:
       #   # logLevel: debug
 
@@ -121,7 +130,8 @@ spec:
         endpoint: 0.0.0.0:8889
         send_timestamps: true
         resource_to_telemetry_conversion: 
-          enabled: true
+          #  If enabled is true, all the resource attributes will be converted to metric labels by default.
+          enabled: false 
 
       jaeger:
         endpoint: jaeger-operator-jaeger-collector:14250
@@ -160,12 +170,12 @@ spec:
       pipelines:
         traces:
           receivers: [otlp, jaeger]
-          processors: [batch]
+          processors: [spanmetrics, batch]
           exporters: [otlphttp/tempo, jaeger]
 
         metrics:
           receivers: [prometheus]
-          # processors: [batch]
+          processors: [batch]
           exporters: [prometheus]
 
         # logs:
