dimention cache and custom aggr in otelcol config

--- a/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/opentelemetry-collector.yaml
@@ -116,8 +116,8 @@ spec:
           - name: http.method
             default: GET
           - name: http.status_code
-        dimensions_cache_size: 1000
-        aggregation_temporality: "AGGREGATION_TEMPORALITY_DELTA"
+        # dimensions_cache_size: 1000
+        # aggregation_temporality: "AGGREGATION_TEMPORALITY_DELTA"
 
     exporters:
       # if logging enabled, info is default logLevel
