--- a/env/test/jaeger-create-span-app/auto-instrumentation.yaml
+++ b/env/test/jaeger-create-span-app/auto-instrumentation.yaml
@@ -25,7 +25,7 @@ spec:
     - name: OTEL_SERVICE_NAME
       value: $(OTEL_APP_NAMESPACE)-$(OTEL_APP_NAME)
   java:
-    image: ghcr.io/open-telemetry/opentelemetry-operator/autoinstrumentation-java:1.10.1
+    image: ghcr.io/open-telemetry/opentelemetry-operator/autoinstrumentation-java:latest
   nodejs:
     image: ghcr.io/open-telemetry/opentelemetry-operator/autoinstrumentation-nodejs:latest
   python:
