add release label to grafana svc monitor

--- a/env/devops/monitoring/grafana/values.yaml
+++ b/env/devops/monitoring/grafana/values.yaml
@@ -2,11 +2,6 @@
 # Manage ONLY GRAFANA resources as part of this kustomize deployment
 # and disable all other resources related to Prometheus and metrics
 # as those other resources to be deployed in all clusters as part of cluster addon argocd applicationset
-global:
-  serviceMonitor:
-    interval: ""
-    selfMonitor: true
-    
 defaultRules:
   create: false
 
@@ -123,6 +118,9 @@ grafana:
       createPrometheusReplicasDatasources: false
       label: grafana_datasource
       labelValue: "1"
+  serviceMonitor:
+    labels:
+      release: prometheus-operator
 
 kubeApiServer:
   enabled: true
