add svcmonitor for otel add finalizer to argocd apps and proj

--- a/argocd/apps/cluster-addons/cluster-addons-kynervo-appset.yaml
+++ b/argocd/apps/cluster-addons/cluster-addons-kynervo-appset.yaml
@@ -5,6 +5,8 @@ kind: ApplicationSet
 metadata:
   name: cluster-addons-kynervo-appset
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   generators:
     - clusters:
@@ -19,6 +21,8 @@ spec:
       namespace: argocd
       labels:
         appset: cluster-addons-kynervo-appset
+      finalizers:
+        - resources-finalizer.argocd.argoproj.io
     spec:
       project: cluster-addons
       source:
