--- a/env/cluster-addons/monitoring/opentelemetry/resources/servicemonitor-otelcol-metrics.yaml
+++ b/env/cluster-addons/monitoring/opentelemetry/resources/servicemonitor-otelcol-metrics.yaml
@@ -14,3 +14,10 @@ spec:
       app.kubernetes.io/name: otel-collector-daemonset-collector
   endpoints:
     - port: otel-prometheus-exporter
+      relabelings:
+        - sourceLabels:
+            - "service"
+          regex: 'otel-collector-daemonset-collector-headless'
+          action: drop
+
+    
