--- a/argocd/apps/cluster-addons/cluster-addons-monitoring-appset.yaml
+++ b/argocd/apps/cluster-addons/cluster-addons-monitoring-appset.yaml
@@ -3,6 +3,8 @@ kind: ApplicationSet
 metadata:
   name: cluster-addons-monitoring-appset
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   generators:
     - matrix:
@@ -23,6 +25,8 @@ spec:
       namespace: argocd
       labels:
         appset: cluster-addons-monitoring-appset
+      finalizers:
+        - resources-finalizer.argocd.argoproj.io
     spec:
       project: cluster-addons
       source:
