--- a/argocd/apps/devops/devops-monitoring-appset.yaml
+++ b/argocd/apps/devops/devops-monitoring-appset.yaml
@@ -3,6 +3,8 @@ kind: ApplicationSet
 metadata:
   name: devops-monitoring-appset
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   generators:
     - matrix:
@@ -23,6 +25,8 @@ spec:
       namespace: argocd
       labels:
         appset: devops-monitoring-appset
+      finalizers:
+        - resources-finalizer.argocd.argoproj.io
     spec:
       project: devops
       source:
