--- a/argocd/apps/devops/devops-shared-appset.yaml
+++ b/argocd/apps/devops/devops-shared-appset.yaml
@@ -3,6 +3,8 @@ kind: ApplicationSet
 metadata:
   name: devops-shared-appset
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   generators:
     - git:
@@ -17,6 +19,8 @@ spec:
       namespace: argocd
       labels:
         appset: devops-shared-appset
+      finalizers:
+        - resources-finalizer.argocd.argoproj.io
     spec:
       project: devops
       source:
