--- a/argocd/apps/devops/devops-tools-appset.yaml
+++ b/argocd/apps/devops/devops-tools-appset.yaml
@@ -3,6 +3,8 @@ kind: ApplicationSet
 metadata:
   name: devops-tools-appset
   namespace: argocd
+  finalizers:
+    - resources-finalizer.argocd.argoproj.io
 spec:
   generators:
     - git:
@@ -20,6 +22,8 @@ spec:
       namespace: argocd
       labels:
         appset: devops-tools-appset
+      finalizers:
+        - resources-finalizer.argocd.argoproj.io
     spec:
       project: devops
       source:
