--- a/env/cluster-addons/tools/dapr/kustomization.yaml
+++ b/env/cluster-addons/tools/dapr/kustomization.yaml
@@ -1,5 +1,8 @@
 kind: Kustomization
 
+resources:
+  - "./resources/pod-monitor.yaml"
+  
 helmCharts:
   - repo: https://dapr.github.io/helm-charts/
     name: dapr
