--- a/env/cluster-addons/tools/dapr/resources/podmonitor.yaml
+++ b/env/cluster-addons/tools/dapr/resources/podmonitor.yaml
@@ -1,16 +1,14 @@
 apiVersion: monitoring.coreos.com/v1
 kind: PodMonitor
-
 metadata:
-  name: dapr-pod-monitor
+  name: dapr-podmonitor
   labels:
-    name: dapr-pod-monitor
+    name: dapr-podmonitor
     release: prometheus-operator
-
 spec:
   namespaceSelector:
-    matchNamespace:
-      - tools
+    matchNames:
+      - "tools"
   podMetricsEndpoints:
     - port: metrics
   selector:
