add caBundle ignoreDiff for val and mutating webhooks

--- a/env/devops/argocd/values.yaml
+++ b/env/devops/argocd/values.yaml
@@ -178,6 +178,16 @@ server:
     # To enable helm install through kustomize in argocd
     kustomize.buildOptions: --enable-helm
 
+    # Ignore difference for alb contoller webhook clientConfig
+    # can apply this to other required apps using "syncPolicy.syncOptions: - RespectIgnoreDifferences=true" in argocd app
+    resource.customizations.ignoreDifferences.admissionregistration.k8s.io_MutatingWebhookConfiguration: |
+      jqPathExpressions:
+      - '.webhooks[]?.clientConfig.caBundle'
+    resource.customizations.ignoreDifferences.admissionregistration.k8s.io_ValidatingWebhookConfiguration: |
+      jqPathExpressions:
+      - '.webhooks[]?.clientConfig.caBundle'
+
+
   # rbacConfig:
   # {}
   # policy.csv is a file containing user-defined RBAC policies and role definitions (optional).
